--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,18 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Incidia How To
+description: The most common how to for things that are always asked
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://incidia-open-source.github.io
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
+
+color_scheme: dark
+
+callouts:
+  info:
+    title: Information
+    color: blue
+  warning:
+    title: Warning
+    color: red
